--- a/package.json
+++ b/package.json
@@ -19,6 +19,15 @@
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.0.4",
+    "@typescript-eslint/parser": "^5.30.6",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "turbo": "^1.3.1",
     "vite": "^3.0.0"
   }
