add nvm, prettierignore, tsconfig, tauri.conf update

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,9 @@
 {
-  "singleQuote": false,
-  "printWidth": 120
+  "tabWidth": 2,
+  "useTabs": false,
+  "singleQuote": true,
+  "trailingComma": "es5",
+  "bracketSpacing": true,
+  "bracketSameLine": false,
+  "proseWrap": "never"
 }
