--- a/apps/workspace/package.json
+++ b/apps/workspace/package.json
@@ -14,6 +14,8 @@
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
     "typescript": "^4.6.4",
