--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "apps/*"
   ],
   "scripts": {
-    "build": "turbo run build", 
+    "build": "turbo run build",
     "test": "turbo run test",
     "lint": "turbo run lint",
     "dev": "turbo run dev",
@@ -26,8 +26,9 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "prettier": "^2.7.1",
     "turbo": "^1.3.1",
     "vite": "^3.0.0"
   }
