--- a/.eslintrc
+++ b/.eslintrc
@@ -1,17 +1,31 @@
 {
   "parser": "@typescript-eslint/parser",
   "extends": [
-    "airbnb",
+    "airbnb-typescript",
     "prettier",
     "plugin:react/recommended",
     "plugin:react/jsx-runtime",
     "plugin:import/recommended"
   ],
+  "parserOptions": {
+    "project": "./tsconfig.json"
+  },
   "plugins": ["prettier"],
   "rules": {
     "no-shadow": "off",
     "@typescript-eslint/no-shadow": ["error"],
     "react/jsx-filename-extension": [1, { "extensions": [".tsx", ".ts"] }],
-    "prettier/prettier": ["error"]
+    "prettier/prettier": ["error"],
+    "import/no-unresolved": "off",
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "js": "never",
+        "jsx": "never",
+        "ts": "never",
+        "tsx": "never"
+      }
+    ]
   }
 }
