--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@tauri-apps/cli": "^1.0.4",
     "@typescript-eslint/parser": "^5.30.6",
     "eslint": "^8.2.0",
-    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
