fix eslint by disabling rules

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1.0.2"
+    "@tauri-apps/api": "^1.0.2",
+    "eslint-config-airbnb": "^19.0.4"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.0.4",
