--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,7 @@
 {
   "parser": "@typescript-eslint/parser",
   "extends": [
+    "airbnb",
     "airbnb-typescript",
     "prettier",
     "plugin:react/recommended",
@@ -13,7 +14,7 @@
   "plugins": ["prettier"],
   "rules": {
     "no-shadow": "off",
-    "@typescript-eslint/no-shadow": ["error"],
+    "@typescript-eslint/no-shadow": "off",
     "react/jsx-filename-extension": [1, { "extensions": [".tsx", ".ts"] }],
     "prettier/prettier": ["error"],
     "import/no-unresolved": "off",
